@@ -1,5 +1,2 @@
 # Enable Java preview features
 --enable-preview
-
-# Enable Java incubator modules
---add-modules=jdk.incubator.foreign
